Bug 121686 - Assert on text + space + dash + enter
Summary: Assert on text + space + dash + enter
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:6.3.0 target:6.2.3 target:6.1.6
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2018-11-24 08:24 UTC by Jim Raykowski
Modified: 2019-03-08 09:55 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (7.17 KB, text/plain)
2018-11-24 13:42 UTC, Julien Nabet
Details
gdb bt (7.39 KB, text/plain)
2019-03-06 20:59 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-11-24 08:24:09 UTC
To repro crash:

1) type any characters in any module followed by a space followed by a -
2) press ENTER

Assert message:

/core/include/rtl/ustring.hxx:676: sal_Unicode rtl::OUString::operator[](sal_Int32) const: Assertion `index >= 0 && static_cast<sal_uInt32>(index) < static_cast<sal_uInt32>(getLength())' failed.

Version: 6.3.0.0.alpha0+
Build ID: 70970f8b72eddc66693ec28d26c2dc764009d3e3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Also happens previous to this build.
Comment 1 Julien Nabet 2018-11-24 13:42:49 UTC
Created attachment 146997 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I got an assert.
Comment 2 Xisco Faulí 2018-11-26 16:36:58 UTC
Also reproduced in

Version: 6.2.0.0.alpha1+
Build ID: f5011d7226060e04e7b92f035f71e285b853712c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF-dbg, Branch:master, Time: 2018-11-17_07:45:26
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 Julien Nabet 2019-03-06 20:59:33 UTC
Created attachment 149773 [details]
gdb bt
Comment 4 Julien Nabet 2019-03-06 21:02:40 UTC
I submitted this patch to review:
https://gerrit.libreoffice.org/#/c/68832/
Comment 5 Commit Notification 2019-03-07 12:30:05 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/67d170868401335434772f1be23d565d23c1fbea%5E%21

tdf#121686: fix assert in SvxAutoCorrect::FnChgToEnEmDash (editeng)

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2019-03-07 13:07:03 UTC
backport for 6.2 branch waiting for review here:
https://gerrit.libreoffice.org/#/c/68858/
Comment 7 Commit Notification 2019-03-07 15:57:03 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/1b64d8e90329fa413c3e71abfda2dfc086e0db5b%5E%21

tdf#121686: fix assert in SvxAutoCorrect::FnChgToEnEmDash (editeng)

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-03-08 09:55:18 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/d4c6057486f9667e82d7d4810bb2d421071b0eb2%5E%21

tdf#121686: fix assert in SvxAutoCorrect::FnChgToEnEmDash (editeng)

It will be available in 6.1.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.