tdf#121686: fix assert in SvxAutoCorrect::FnChgToEnEmDash (editeng)

See https://bugs.documentfoundation.org/attachment.cgi?id=149773

Change-Id: I1696984a8df1b38a359a8177a5f3670526d2696e
Reviewed-on: https://gerrit.libreoffice.org/68832
Tested-by: Jenkins
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>